<resources>
 	<string name="app_name">Ma Moyenne</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="labelGererNotes">Gérer Mes Notes</string>
 	<string name="addSubject">AJOUT D\'UNE MATIERE</string>
 	<string name="subjectNameLabel">Nom de la matière</string>
 	<string name="coefLabel">Coefficient de la matière</string>
 	<string name="register">Enregistrer</string>
 	<string name="addMark">AJOUT D\'UNE NOTE</string>
 	<string name="mark">Note</string>
 	<string name="coefNote">Coefficient de la note</string>
 	<string name="typeExa">Type d\'examen</string>
 	<string name="subjectDetails">Detail Matiere</string>
 	<string name="modify">Modifier</string>
 	<string name="delete">Supprimer</string>
 	<string name="markDetails">Details notes</string>
 	<string name="subjectList">Liste Matiere</string>
 	<string name="add">+</string>
 	<string name="generalMark">Votre Moyenne Generale est de :</string>
 	<string name="markManage">Gérer Mes Notes</string>
 	<string name="markFor">Notes pour :</string>
 	<string name="average">Moyenne :</string>
 	<string name="mainGeneralMark">/ 20</string>
 	<string name="deletedMark">Note supprimée !</string>
 	<string name="typeExaVal">Valeur type d\'examen</string>
 	<string name="markValCoef">Valeur du coefficient de la note</string>
 	<string name="noteInputLabel">Saisie de note</string>
 	<string name="errorCoeffToast">Erreur ! Veuillez saisir un coefficient compris entre 1 et 10.</string>
 	<string name="errorMarkToast">Erreur ! Veuillez saisir une note comprise entre 0 et 20.</string>
 	<string name="errorEmptyFieldsToast">Erreur ! Veuillez remplir tous les champs.</string>
 	<string name="createMarkToast">Note créée !</string>
 	<string name="updateMarkToast">Note modifiée !</string>
 	<string name="deleteMarkToast">Note supprimée !</string>
 	<string name="createFieldToast">Matière créée !</string>
 	<string name="updateFieldToast">Matière modifiée !</string>
 	<string name="deleteFieldToast">Matière supprimée !</string> 	
 	<string name="dialogWarning">Attention</string>
 	<string name="dialogYes">Oui</string>
 	<string name="dialogNo">Non</string>
 	<string name="dialogAskUpdateMark">Êtes-vous sûr de vouloir modifier cette note ?</string>
 	<string name="dialogAskDeleteMark">Êtes-vous sûr de vouloir supprimer cette note ?</string>
 	<string name="dialogAskUpdateField">Êtes-vous sûr de vouloir modifier cette matière ?</string>
 	<string name="dialogAskDeleteField">Êtes-vous sûr de vouloir supprimer cette matière ?</string>
 	<string name="about">Cette Application permet la gestion de vos notes au cours d\'une année scolaire. Vous pouvez ajouter des matières ainsi que des notes avec des intitulés et des coefficients .</string>
 	<string name="help">Pour demander de l\'aide veuillez envoyer un mail à mamoyenne@gmail.com</string>
 	<string name="actionHelp">Aide</string>
 	<string name="actionAbout">A propos</string>
 	<string name="start">Accueil</string>
 	<string name="settings">Parametres</string>
 	<string name="export">Exporter Notes</string>
 	<string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>Francais</item>
        <item>Arabic</item>
    </string-array>
    <string name="searchButton">Rechercher</string>
    <string name="searchNoResultSubject">Matière non trouvée</string>
    <string name="searchNoResultMark">Note(s) non trouvée(s)</string>    
    <string name="libelleCol1Subject">Nom matière</string>
    <string name="libelleCol2Subject">Coefficient</string>
    <string name="libelleCol3Subject">Moyenne</string>
    <string name="libelleCol1Mark">Note</string>
    <string name="libelleCol2Mark">Type d\'examen</string>
    <string name="libelleCol3Mark">Coefficient</string>
    <string name="txtSearchMark">Saisir le type de note</string>
</resources>
