<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/detailMatiereLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/markDetails" />

    <TextView
        android:id="@+id/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark" />

    <EditText
        android:id="@+id/valeurNoteLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noteInputLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/coefficientMatiereLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coefNote" />

    <EditText
        android:id="@+id/valeurCoeffLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/markValCoef"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/typeExamLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeExa" />

    <EditText
        android:id="@+id/valeurTypeExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/typeExaVal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify" />

        <Button
            android:id="@+id/btnFrmCreateMatiere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>