<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:onClick="frmAjoutNote"
                android:text="@string/add"
                android:textColor="@color/green"
                android:textSize="14pt"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/ajoutMatiereLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/markFor"
            android:textAppearance="@style/LabelTitles" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<TextView
    android:id="@+id/txt_row_liste_note"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:minWidth="@dimen/activity_horizontal_margin"
    android:text="Note"
    android:textColor="@color/darkred"
    android:textSize="20sp"
    android:width="33dp" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/txt_row_liste_note__type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:minWidth="@dimen/activity_horizontal_margin"
        android:text="Type d&apos;examen"
        android:textColor="@color/darkred"
        android:textSize="20sp"
        android:width="10dp" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/txt_row_liste_note_coeff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:minWidth="@dimen/activity_horizontal_margin"
        android:text="Coefficient"
        android:textColor="@color/darkred"
        android:textSize="20sp"
        android:width="10dp" />

</LinearLayout>
        
        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:textColor="@android:color/white" >
        </ListView>

        <TextView
            android:id="@+id/idnoteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/average"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/moyenneMatiereLabel"
            android:layout_width="128dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="0.19"
            android:gravity="center"
            android:text="@string/mainGeneralMark"
            android:textColor="@android:color/white"
            android:textSize="12pt" />
    </LinearLayout>

</ScrollView>